--- a/contact.html
+++ b/contact.html
@@ -44,35 +44,36 @@
 </head>
 
 <body>
-  <!-- Navbar (sit on top) -->
-  <div class="w3-top">
-      <div class="w3-bar" id="myNavbar">
-          <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right"
-              href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
-              <i class="fa fa-bars"></i>
-          </a>
-          <a href="Home.html" class="w3-bar-item w3-button">HOME</a>
-          <a href="About.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT ME</a>
-          <a href="LearnMore.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> LEARN MORE</a>
-          <a href="Contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
-              WORK WITH ME</a>
-          <a href="Contact.html" class="w3-bar-item w3-button w3-right button-hover w3-hover-opacity w3-hide-small"
-              style="background-color: #6200b3!important;
+     <!-- Navbar (sit on top) -->
+     <div class="w3-top">
+         <div class="w3-bar" id="myNavbar">
+             <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right"
+                 href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
+                 <i class="fa fa-bars"></i>
+             </a>
+             <a href="index.html" class="w3-bar-item w3-button">HOME</a>
+             <a href="about.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT ME</a>
+             <a href="learnmore.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> LEARN
+                 MORE</a>
+             <a href="contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
+                 WORK WITH ME</a>
+             <a href="contact.html" class="w3-bar-item w3-button w3-right button-hover w3-hover-opacity w3-hide-small"
+                 style="background-color: #6200b3!important;
                         color:white;">
-              START NOW
-          </a>
-      </div>
+                 START NOW
+             </a>
+         </div>
 
-      <!-- Navbar on small screens -->
-      <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-          <a href="About.html" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT ME</a>
-          <a href="LearnMore.html" class="w3-bar-item w3-button" onclick="toggleFunction()">LEARN MORE</a>
-          <a href="Contact.html" class="w3-bar-item w3-button button-hover w3-hover-opacity" style="background-color: #6200b3!important;
+         <!-- Navbar on small screens -->
+         <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
+             <a href="about.html" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT ME</a>
+             <a href="learnmore.html" class="w3-bar-item w3-button" onclick="toggleFunction()">LEARN MORE</a>
+             <a href="contact.html" class="w3-bar-item w3-button button-hover w3-hover-opacity" style="background-color: #6200b3!important;
                         color:white;">
-              START NOW
-          </a>
-      </div>
-  </div>
+                 START NOW
+             </a>
+         </div>
+     </div>
     <!-- Container (Contact Section) -->
     <div class="w3-content w3-container w3-padding-64" id="contact">
         <div class="w3-padding-large">
