--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
                 href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
                 <i class="fa fa-bars"></i>
             </a>
-            <a href="Home.html" class="w3-bar-item w3-button">HOME</a>
-            <a href="About.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT ME</a>
-            <a href="LearnMore.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> LEARN MORE</a>
-            <a href="Contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
+            <a href="index.html" class="w3-bar-item w3-button">HOME</a>
+            <a href="about.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT ME</a>
+            <a href="learnmore.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> LEARN MORE</a>
+            <a href="contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
                 WORK WITH ME</a>
-            <a href="Contact.html" class="w3-bar-item w3-button w3-right button-hover w3-hover-opacity w3-hide-small"
+            <a href="contact.html" class="w3-bar-item w3-button w3-right button-hover w3-hover-opacity w3-hide-small"
                 style="background-color: #6200b3!important;
                         color:white;">
                 START NOW
@@ -66,9 +66,9 @@
 
         <!-- Navbar on small screens -->
         <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-            <a href="About.html" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT ME</a>
-            <a href="LearnMore.html" class="w3-bar-item w3-button" onclick="toggleFunction()">LEARN MORE</a>
-            <a href="Contact.html" class="w3-bar-item w3-button button-hover w3-hover-opacity" style="background-color: #6200b3!important;
+            <a href="about.html" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT ME</a>
+            <a href="learnmore.html" class="w3-bar-item w3-button" onclick="toggleFunction()">LEARN MORE</a>
+            <a href="contact.html" class="w3-bar-item w3-button button-hover w3-hover-opacity" style="background-color: #6200b3!important;
                         color:white;">
                 START NOW
             </a>
