--- a/index copy.html
+++ b/index copy.html
@@ -20,10 +20,8 @@
     <base href="https://coryhardmancoaching.com">
     <meta charset="UTF-8">
     <meta name="copyright" content="all content herin is property of cory hardman coaching by copyright">
-    <meta name="Keywords" content="life coach,life coaching,mom,teens,mom of teens,change,thoughts, how to,life, coach,how to change your
-        thoughts,gain,confidence,parenting skills,parenting,parent,the life coach school,relationship with your
-        teen,relationship,build relationship,connect to your teen,teenager,teenagers,one on one,zoom,one
-        coaching,Cory,Hardman,Cory Hardman">
+    <meta name="Keywords"
+        content="life coach,life coaching,mom,teens,mom of teens,change,thoughts, how to,life, coach,how to change your thoughts,gain,confidence,parenting skills,parenting,parent,the life coach school,relationship with your teen,relationship,build relationship,connect to your teen,teenager,teenagers,one on one,zoom,one coaching,Cory,Hardman,Cory Hardman">
     <meta name="description" content="Life Coach for mom's of teens." />
 
     <meta property="og:type" content="website" />
@@ -34,11 +32,25 @@
     <meta property="og:site_name" content="Cory Hardman Coaching" />
     <!-- Theme Made By www.w3schools.com modified by Jeremy Hardman Design -->
     <link rel="icon" type="image/x-icon" href="images/CH_coaching_logo_final_dark512.png">
+
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!--adobe fonts-->
     <link rel="stylesheet" href="https://use.typekit.net/kzw5eyd.css">
+    <!--adobe fonts-->
     <link rel="stylesheet" href="styles.css">
+      <!-- Begin Mailchimp Signup Form -->
+      <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css">
+      <style type="text/css">
+          #mc_embed_signup {
+              background: #fff;
+              clear: left;
+              font: 14px Helvetica, Arial, sans-serif;
+              width: 600px;
+          }
+
+          /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+      </style>
 </head>
 
 <body>
@@ -53,10 +65,10 @@
             <a href="about.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT ME</a>
             <a href="learnmore.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> LEARN MORE</a>
             <a href="contact.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i>
-                WORK WITH ME</a> 
-                <a href="printable_50.html" class="w3-bar-item w3-button w3-hide-small"><i
-                        class="fa fa-file-text" aria-hidden="true"></i>
-                    FREE PRINTABLE</a>
+                WORK WITH ME</a>
+             <a href="printable_50.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-file-text"
+                     aria-hidden="true"></i>
+                 FREE PRINTABLE</a>
             <!-- Calendly link widget begin -->
             <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
             <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
@@ -81,13 +93,14 @@
             <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
             <a href="" class=" w3-bar-item w3-button button-hover w3-hover-opacity" style="background-color: #6200b3!important;
                         color:white;"
-                onclick="Calendly.initPopupWidget({url: 'https://calendly.com/cory-hardman/discovery-call'});return false;">BOOK
+                onclick="Calendly.initPopupWidget({url:
+                'https://calendly.com/cory-hardman/discovery-call'});return false;">BOOK
                 NOW</a>
             <!-- Calendly link widget end -->
         </div>
     </div>
     <!-- First Parallax Image with Logo Text -->
-    <div class="about-bgimg w3-display-container w3-opacity-min" id="home">
+    <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
         <div class="w3-display-middle"
             style="white-space:nowrap; background-color: white; opacity: 90%;border-radius: 25px;width: 50%;">
             <div class="w3-center w3-padding-large w3-xlarge w3-wide">
@@ -96,55 +109,49 @@
             </div>
         </div>
     </div>
+
     <!-- Container (hero Coaching) -->
     <div class="w3-content w3-container w3-padding-64" id="about">
-        <h3 class="w3-center">Meet Cory</h3>
-        <div class="w3-col m6 w3-right w3-padding-large">
-            <p>I am a mother or 3, a member of The Church of Jesus Christ of Latter Day Saints and a woman trying to
-                navigate this world of emotions that are constantly changing.</p>
+        <h3 class="w3-center">Are you a mom of a teen who wants to elevate your parenting approach?</h3>
+        <div class="w3-col w3-padding-large">
+            <p>Do you feel like you have constant conflict with your teen, worry about their future, and are being
+                judged by others? Do you want to find peace and acceptance for what your teen is choosing to do and who
+                they are choosing to be even when you don't agree with them? </p>
 
-            <p> Many years ago, as my young children became teenagers, I found myself taking on their problems and
-                concerns as my own. I thought all of their feelings, actions, and decisions were a direct reflection of
-                me and the way I raised them. This brought so much unnecessary pain and guilt for me. I lived in a world
-                of constant guilt and regrets of what I should have done differently and how I was failing as a mother.
-                My physical health suffered, my emotional health suffered, my spiritual health suffered, and my family
-                relationships suffered.</p>
-
-            <p> Fast forward 8 years. I am now raising 2 young adult children as well as a teenager. Coaching has helped
-                me become the mother I want to be and show up in the ways I want to show up regardless of the actions of
-                those around me. I have learned that I can choose to love my children, but not their choices. Their
-                emotions, decisions, and actions are not a reflection of me or my parenting skills, but of them using
-                their agency the way they choose. We are blessed that God has given all of us agency. We are the only
-                ones that can choose the way we feel and the way we live our life!</p>
-        </div>
-
-        <div class="">
-            <div class="w3-col m6 w3-center w3-padding-large">
-                <img src="images/portraits/cory_hardman_portrait-2.jpg" class="w3-card w3-round w3-image"
-                    alt="Photo of Me" width="500" height="333">
-            </div>
+            <p>If you said yes to any of the above, it's time to stop being a victim to your circumstances and learn the
+                skills you need to transform your parenting from good to great!
+            </p>
         </div>
     </div>
 
-    <!-- Third Parallax Image with Portfolio Text -->
-    <div class="w3-center bgimg-3 w3-display-container w3-opacity-min">
-        <div class="w3-display-middle">
-            <span class="w3-xxxlarge w3-hover-opacity-off w3-wide"></span>
-            <div class="w3-display-middle"
-                style="background-color: white; opacity: 55%;padding: 20px; border-radius: 20px;">
-                <span class="w3-xxxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;">LOVE IS AN OPTION</span>
-            </div>
+    <!-- Second Parallax Image with Portfolio Text -->
+    <div class="bgimg-2 w3-display-container w3-center w3-opacity-min">
+        <div class="w3-display-middle"
+            style="background-color: white; opacity: 55%;padding: 20px; border-radius: 20px;">
+            <span class="w3-xxxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;">COACHING EMPOWERS</span>
         </div>
     </div>
     <!-- What is coaching Section -->
     <div class="w3-content w3-container w3-padding-64">
-        <div class="w3-center">
-            <h3 class="w3-center">Choose How You Show Up</h3>
-
-            <p>Together we uncover the thoughts that are not serving you well. I teach you how to choose the thoughts
-                you want to think and how to get rid of the ones that are causing unnecessary pain and sorrow in your
-                life. You will learn that you have total control over your feelings and your results that we often
-                believe are out of our control. It is time to empower yourself!</p>
+        <h3 class="w3-center">Empowerment</h3>
+        <div class="w3-container">
+            <div class="w3-col m6 w3-right w3-padding-large">
+                <p>In coaching, we focus on the present and the future, instead of dwelling on the past.
+                    We uncover any thoughts you are having, even the ones you weren't aware of, that cause you to feel
+                    and
+                    act a certain way. When you recognize these thoughts, you can decide if those thoughts are serving
+                    you
+                    or hurting you and if you want to keep them.
+                    I create a safe space to sort through your thoughts and be aware of how your thoughts create your
+                    feelings. I give you tools to help you take your life from good to great!
+                    Want to give it a try?</p>
+            </div>
+            <div class="">
+                <div class="w3-col m6 w3-center w3-padding-large" style="margin-top: 44px;">
+                    <img src="images/portraits/cory_hardman_portrait-6.jpg" class="w3-card w3-round w3-image"
+                        alt="Photo of Me" width="500" height="333">
+                </div>
+            </div>
         </div>
         <div class="w3-center">
             <div class="w3-padding-16 w3-row w3-margin">
@@ -160,6 +167,95 @@
             </div>
         </div>
     </div>
+        <!-- Third Parallax Image with Portfolio Text -->
+        <div class="bgimg-2 w3-display-container w3-center w3-opacity-min">
+            <div class="w3-display-middle"
+                style="background-color: white; opacity: 55%;padding: 20px; border-radius: 20px;">
+                <span class="w3-xxxlarge w3-hover-opacity-off w3-wide" style="color: #6200b3;">SIGN UP</span>
+            </div>
+        </div>
+  <!-- Begin Mailchimp Signup Form -->
+    <div id="mc_embed_signup" class="w3-display-container w3-center" style="margin: auto;padding: 100px 0px;">
+        <form
+            action="https://coryhardmancoaching.us12.list-manage.com/subscribe/post?u=4ddb69cbb17ab44b790615ac2&amp;id=76d8ac9297"
+            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+            target="_blank" novalidate> 
+            <div id="mc_embed_signup_scroll">
+                <h2 style="text-align: center;font-size: 36px;">FREE Printable <br>&quot;50 Thoughts Confident Moms
+                    Think&quot;</h2>
+                    <p>Becoming a confident mom requires thoughts that create confidence. I have put together 50 thoughts
+                    you can choose from to help you start building more confidence when parenting your teen. Once you
+                    find a few that feel right, try them on and see how they change the way you approach your
+                    teen!<br><br>
+
+                    You will be emailed the downloadable pdf and will receive occasional emails from me with teen
+                    parenting tips. </p>
+                <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                <div class="mc-field-group">
+                    <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
+                    </label>
+                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                </div>
+                <div class="mc-field-group">
+                    <label for="mce-FNAME">First Name <span class="asterisk">*</span>
+                    </label>
+                    <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
+                </div>
+                <div id="mce-responses" class="clear foot">
+                    <div class="response" id="mce-error-response" style="display:none"></div>
+                    <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                        name="b_4ddb69cbb17ab44b790615ac2_76d8ac9297" tabindex="-1" value=""></div>
+                <div class="optionalParent">
+                    <div class="clear foot">
+
+
+                      <a href="/50 Thoughts Confident Moms Think.pdf" download="50 Thoughts Confident Moms Think">
+
+
+
+                        <!-- <a href="/downloadables/50 Thoughts Confident Moms Think.pdf" download="free printable Cory Hardman Coaching"> -->
+                        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
+                            class="button
+                            button-hover button-hover-shadow w3-button w3-hover-opacity"
+                            style="background-color: #6200b3!important;">Download
+
+                      </a>
+
+                        <!-- <p class="brandingLogo"><a href="http://eepurl.com/h4xr9b"
+                                title="Mailchimp - email marketing made easy and fun"><img
+                                    src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a>
+                        </p> -->
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+    <script type='text/javascript'>
+        (function ($) {
+            window.fnames = new Array();
+            window.ftypes = new Array();
+            fnames[0] = 'EMAIL';
+            ftypes[0] = 'email';
+            fnames[1] = 'FNAME';
+            ftypes[1] = 'text';
+            fnames[2] = 'LNAME';
+            ftypes[2] = 'text';
+            fnames[3] = 'ADDRESS';
+            ftypes[3] = 'address';
+            fnames[4] = 'PHONE';
+            ftypes[4] = 'phone';
+            fnames[5] = 'BIRTHDAY';
+            ftypes[5] = 'birthday';
+        }(jQuery));
+        var $mcj = jQuery.noConflict(true);
+    </script>
+    <!--End mc_embed_signup-->
+
+
     <!-- Footer -->
     <footer class="bgimg-2 w3-display-container w3-center w3-padding-64">
         <div class="w3-container w3-row w3-center">
@@ -175,10 +271,12 @@
                 <a href="https://www.instagram.com/coryhardmancoaching/" title="Cory Hardman Coaching Instagram"
                     target="_blank" rel="noopener"><i class="fa fa-instagram w3-hover-opacity"></i></a>
             </div>
-            <div class="w3-third w3-center w3-padding-large">
-                <div class="w3-center w3-padding-large">
-                    <img src="images/CH_coaching_logo_finalweb.png" class="w3-center w3-image" style="height: 15vw;"
+            <div class="w3-third w3-center">
+                <div class="w3-container">
+                    <img src="images/CH_coaching_logo_finalweb.png" class="w3-left w3-image" style="height: 15vw;"
                         alt="CH_coaching_logo_branding">
+                    <img src="images/LifeCoachSchool_Certified_Coach_Seal.png" class="w3-right w3-image" style="height: 15vw;" alt="Cory Hardman Coacing LCS Certificate Coach
+                            Seal">
                 </div>
             </div>
 
@@ -211,10 +309,6 @@
             </div>
         </div>
     </footer>
-
-    <script type="module" src="module.js">
-
-    </script>
     <script>
         // Modal Image Gallery
         function onClick(element) {
@@ -223,7 +317,6 @@
             var captionText = document.getElementById("caption");
             captionText.innerHTML = element.alt;
         }
-
         // Change style of navbar on scroll
         window.onscroll = function () {
             myFunction()
@@ -237,7 +330,6 @@
                 navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-white", "");
             }
         }
-
         // Used to toggle the menu on small screens when clicking on the menu button
         function toggleFunction() {
             var x = document.getElementById("navDemo");
